// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create delegation - snapshot 1`] = `
{
  "BINRepresentation": {
    "inputs": [
      Uint8Array [
        0,
        0,
        175,
        59,
        95,
        173,
        32,
        246,
        249,
        126,
        178,
        16,
        147,
        78,
        148,
        33,
        118,
        247,
        247,
        208,
        247,
        4,
        35,
        89,
        6,
        89,
        238,
        14,
        2,
        23,
        5,
        58,
        124,
        171,
        1,
        0,
        0,
        0,
      ],
    ],
    "outputs": [
      Uint8Array [
        5,
        1,
        7,
        36,
        182,
        153,
        140,
        199,
        148,
        248,
        72,
        234,
        171,
        44,
        46,
        233,
        79,
        111,
        39,
        17,
        17,
        196,
        107,
        131,
        159,
        8,
        143,
        221,
        250,
        137,
        187,
        241,
        209,
        28,
        186,
        1,
        79,
        49,
        153,
        202,
        53,
        219,
        13,
        234,
        45,
        0,
        240,
        195,
        251,
        24,
        12,
        84,
        185,
        228,
      ],
      Uint8Array [
        0,
        0,
        15,
        224,
        68,
        24,
        228,
        223,
        12,
        6,
        1,
        134,
        236,
        69,
        4,
        87,
        208,
        154,
        217,
        128,
        115,
        147,
        216,
        156,
        236,
        156,
        113,
        214,
        32,
        96,
        33,
      ],
    ],
    "transactionsize": 231,
  },
  "HEXRepresentation_unsigned": "0100040000af3b5fad20f6f97eb210934e942176f7f7d0f70423590659ee0e0217053a7cab010000000805010724b6998cc794f848eaab2c2ee94f6f271111c46b839f088fddfa89bbf1d11cba014f3199ca35db0dea2d00f0c3fb180c54b9e400000fe04418e4df0c060186ec450457d09ad9807393d89cec9c71d6206021",
  "JSONRepresentation": {
    "inputs": [
      {
        "input": {
          "index": 1,
          "input_type": "UTXO",
          "source_id": "af3b5fad20f6f97eb210934e942176f7f7d0f70423590659ee0e0217053a7cab",
          "source_type": "Transaction",
        },
        "utxo": {
          "destination": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
          "type": "Transfer",
          "value": {
            "amount": {
              "atoms": "1703205604300000",
              "decimal": "17032.056043",
            },
            "type": "Coin",
          },
        },
      },
    ],
    "outputs": [
      {
        "destination": "tmt1qyrjfd5e3nref7zga24jcthffahjwyg3csxu3xgc",
        "pool_id": "tpool1dwpe7zy0mhagnwl36ywt5q20xxvu5dwmph4z6q8sc0a3srz5h8jqr0r2yg",
        "type": "CreateDelegationId",
      },
      {
        "destination": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
        "type": "Transfer",
        "value": {
          "amount": {
            "atoms": "1703005604300000",
            "decimal": "17030.056043",
          },
          "type": "Coin",
        },
      },
    ],
  },
  "transaction_id": "9a2173442aec3f56e834675033e40e65e1b6ba9c09e6be8599d3db8bc8a69c5e",
}
`;

exports[`delegate staking - snaphsot 1`] = `
{
  "BINRepresentation": {
    "inputs": [
      Uint8Array [
        0,
        0,
        175,
        59,
        95,
        173,
        32,
        246,
        249,
        126,
        178,
        16,
        147,
        78,
        148,
        33,
        118,
        247,
        247,
        208,
        247,
        4,
        35,
        89,
        6,
        89,
        238,
        14,
        2,
        23,
        5,
        58,
        124,
        171,
        1,
        0,
        0,
        0,
      ],
    ],
    "outputs": [
      Uint8Array [
        6,
        7,
        0,
        16,
        165,
        212,
        232,
        109,
        61,
        61,
        216,
        42,
        173,
        158,
        59,
        189,
        40,
        132,
        167,
        34,
        120,
        238,
        48,
        62,
        119,
        49,
        3,
        170,
        159,
        60,
        54,
        25,
        131,
        33,
        6,
        53,
        9,
        194,
        53,
      ],
      Uint8Array [
        0,
        0,
        15,
        224,
        52,
        115,
        15,
        247,
        11,
        6,
        1,
        134,
        236,
        69,
        4,
        87,
        208,
        154,
        217,
        128,
        115,
        147,
        216,
        156,
        236,
        156,
        113,
        214,
        32,
        96,
        33,
      ],
    ],
    "transactionsize": 216,
  },
  "HEXRepresentation_unsigned": "0100040000af3b5fad20f6f97eb210934e942176f7f7d0f70423590659ee0e0217053a7cab010000000806070010a5d4e86d3d3dd82aad9e3bbd2884a72278ee303e773103aa9f3c36198321063509c23500000fe034730ff70b060186ec450457d09ad9807393d89cec9c71d6206021",
  "JSONRepresentation": {
    "inputs": [
      {
        "input": {
          "index": 1,
          "input_type": "UTXO",
          "source_id": "af3b5fad20f6f97eb210934e942176f7f7d0f70423590659ee0e0217053a7cab",
          "source_type": "Transaction",
        },
        "utxo": {
          "destination": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
          "type": "Transfer",
          "value": {
            "amount": {
              "atoms": "1703205604300000",
              "decimal": "17032.056043",
            },
            "type": "Coin",
          },
        },
      },
    ],
    "outputs": [
      {
        "amount": {
          "atoms": "1000000000000",
          "decimal": "10",
        },
        "delegation_id": "tdelg1d57nmkp24k0rh0fgsjnjy78wxql8wvgr420ncdsesvssvdgfcg6sx6262w",
        "type": "DelegateStaking",
      },
      {
        "destination": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
        "type": "Transfer",
        "value": {
          "amount": {
            "atoms": "1702005604300000",
            "decimal": "17020.056043",
          },
          "type": "Coin",
        },
      },
    ],
  },
  "transaction_id": "7265e382aa4ab9f8db50cbf858a6f9b3e5fcca8d89ca2b104229cdeb0a38676e",
}
`;

exports[`delegate staking providing only pool_id - snapshot 1`] = `
{
  "BINRepresentation": {
    "inputs": [
      Uint8Array [
        0,
        0,
        175,
        59,
        95,
        173,
        32,
        246,
        249,
        126,
        178,
        16,
        147,
        78,
        148,
        33,
        118,
        247,
        247,
        208,
        247,
        4,
        35,
        89,
        6,
        89,
        238,
        14,
        2,
        23,
        5,
        58,
        124,
        171,
        1,
        0,
        0,
        0,
      ],
    ],
    "outputs": [
      Uint8Array [
        6,
        7,
        0,
        16,
        165,
        212,
        232,
        109,
        61,
        61,
        216,
        42,
        173,
        158,
        59,
        189,
        40,
        132,
        167,
        34,
        120,
        238,
        48,
        62,
        119,
        49,
        3,
        170,
        159,
        60,
        54,
        25,
        131,
        33,
        6,
        53,
        9,
        194,
        53,
      ],
      Uint8Array [
        0,
        0,
        15,
        224,
        52,
        115,
        15,
        247,
        11,
        6,
        1,
        134,
        236,
        69,
        4,
        87,
        208,
        154,
        217,
        128,
        115,
        147,
        216,
        156,
        236,
        156,
        113,
        214,
        32,
        96,
        33,
      ],
    ],
    "transactionsize": 216,
  },
  "HEXRepresentation_unsigned": "0100040000af3b5fad20f6f97eb210934e942176f7f7d0f70423590659ee0e0217053a7cab010000000806070010a5d4e86d3d3dd82aad9e3bbd2884a72278ee303e773103aa9f3c36198321063509c23500000fe034730ff70b060186ec450457d09ad9807393d89cec9c71d6206021",
  "JSONRepresentation": {
    "inputs": [
      {
        "input": {
          "index": 1,
          "input_type": "UTXO",
          "source_id": "af3b5fad20f6f97eb210934e942176f7f7d0f70423590659ee0e0217053a7cab",
          "source_type": "Transaction",
        },
        "utxo": {
          "destination": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
          "type": "Transfer",
          "value": {
            "amount": {
              "atoms": "1703205604300000",
              "decimal": "17032.056043",
            },
            "type": "Coin",
          },
        },
      },
    ],
    "outputs": [
      {
        "amount": {
          "atoms": "1000000000000",
          "decimal": "10",
        },
        "delegation_id": "tdelg1d57nmkp24k0rh0fgsjnjy78wxql8wvgr420ncdsesvssvdgfcg6sx6262w",
        "type": "DelegateStaking",
      },
      {
        "destination": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
        "type": "Transfer",
        "value": {
          "amount": {
            "atoms": "1702005604300000",
            "decimal": "17020.056043",
          },
          "type": "Coin",
        },
      },
    ],
  },
  "transaction_id": "7265e382aa4ab9f8db50cbf858a6f9b3e5fcca8d89ca2b104229cdeb0a38676e",
}
`;

exports[`staking withdraw - snapshot 1`] = `
{
  "BINRepresentation": {
    "inputs": [
      Uint8Array [
        1,
        0,
        0,
        109,
        61,
        61,
        216,
        42,
        173,
        158,
        59,
        189,
        40,
        132,
        167,
        34,
        120,
        238,
        48,
        62,
        119,
        49,
        3,
        170,
        159,
        60,
        54,
        25,
        131,
        33,
        6,
        53,
        9,
        194,
        53,
        7,
        0,
        16,
        165,
        212,
        232,
      ],
    ],
    "outputs": [
      Uint8Array [
        1,
        0,
        7,
        0,
        64,
        183,
        67,
        186,
        1,
        245,
        126,
        3,
        217,
        124,
        111,
        187,
        105,
        210,
        60,
        19,
        235,
        228,
        64,
        68,
        225,
        123,
        173,
        196,
        212,
        2,
        129,
        112,
      ],
    ],
    "transactionsize": 78,
  },
  "HEXRepresentation_unsigned": "0100040100006d3d3dd82aad9e3bbd2884a72278ee303e773103aa9f3c36198321063509c235070010a5d4e8040100070040b743ba01f57e03d97c6fbb69d23c13ebe44044e17badc4d4028170",
  "JSONRepresentation": {
    "inputs": [
      {
        "input": {
          "account_type": "DelegationBalance",
          "amount": {
            "atoms": "1000000000000",
            "decimal": "10",
          },
          "delegation_id": "tdelg1d57nmkp24k0rh0fgsjnjy78wxql8wvgr420ncdsesvssvdgfcg6sx6262w",
          "input_type": "Account",
          "nonce": 0,
        },
      },
    ],
    "outputs": [
      {
        "destination": "tmt1q86huq7e03hmk6wj8sf7hezqgnshhtwy6s8gz3ur",
        "lock": {
          "content": "7200",
          "type": "ForBlockCount",
        },
        "type": "LockThenTransfer",
        "value": {
          "amount": {
            "atoms": "800000000000",
            "decimal": "8",
          },
          "type": "Coin",
        },
      },
    ],
  },
  "transaction_id": "c240706a8e614912c950fe0ebb38f2fc6d96327229cebc9f2d759c4b20c26620",
}
`;
